<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" 
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/light_green_background"
    tools:context=".InfoPages.BiodiversityPage">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                app:cardElevation="8dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/bio_title"
                        android:textColor="@color/green5"
                        android:fontFamily="@font/inter_bold"
                        android:textSize="26sp"
                        android:text="Biodiversity"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </TextView>
                    <ImageView
                        android:id="@+id/img_details_bio"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_3"
                        android:layout_width="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_height="200dp">

                    </ImageView>
                    <TextView
                        android:id="@+id/author_text_detail"
                        android:textColor="@color/black"
                        android:fontFamily="@font/inter_bold"
                        android:textSize="10sp"
                        android:text="NSW Government"
                        android:layout_marginTop="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>


                </LinearLayout>
        </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/content_detail_title1"
                android:textSize="20sp"
                android:fontFamily="@font/inter_black"
                android:textColor="@color/black"
                android:text="What is biodiversity?"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:id="@+id/content_detail_1"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="8dp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/inter"
                android:text="@string/what_is_biodi"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"></TextView>

            <TextView
                    android:id="@+id/content_detail_title2"
                    android:textSize="20sp"
                    android:fontFamily="@font/inter_black"
                    android:textColor="@color/black"
                    android:text="Why is biodiversity important?"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            <TextView
                android:id="@+id/content_detail_2"
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:layout_marginTop="8dp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/inter"
                android:text="@string/bio_important"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="13sp">

            </TextView>
            <ImageView
                android:id="@+id/img_bio_benefit"
                android:scaleType="fitXY"
                android:src="@drawable/biodiversity"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="200dp">

            </ImageView>
            <TextView
                android:id="@+id/content_detail_title3"
                android:textSize="20sp"
                android:fontFamily="@font/inter_black"
                android:textColor="@color/black"
                android:text="Benefits"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:id="@+id/content_detail_3"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="1dp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/inter"
                android:text="@string/bio_benefits"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="13sp">

            </TextView>

            <TextView
                android:id="@+id/content_detail_title4"
                android:textSize="20sp"
                android:fontFamily="@font/inter_black"
                android:textColor="@color/black"
                android:text="Values"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/content_detail_4"
                android:layout_width="match_parent"
                android:layout_height="420dp"
                android:layout_marginTop="8dp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/inter"
                android:text="@string/bio_values"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>
            <ImageView
                android:id="@+id/img_bio"
                android:scaleType="fitXY"
                android:src="@drawable/img_8"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="200dp">

            </ImageView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
    
